# youtube-slack-bot

./: .env.example  .gitignore  PRD.md  README.md  SLACK_SETUP.md  USAGE.md  pyproject.toml  test_manual_slack.py  test_slack_integration.py  test_youtube_download.py
scripts/: install_service.sh  setup.sh
services/: com.makepluscode.youtube-downloader.plist
src/: __init__.py  config.py  main.py  slack_handler.py
src/agents/: __init__.py  youtube_agent.py
src/chains/: __init__.py  url_extraction.py
src/prompts/: __init__.py  templates.py
src/tools/: __init__.py  youtube_tool.py
